Delta upload, helper methods implemented
